[OUT02][P1] pilotage-api - correction vulnérabilité xss